[package]
name = "chatapp"
version = "0.3.1"
edition = "2018"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tui = "0.16"
termion = "1.5"
unicode-width = "0.1"
